--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,22 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+# App specific ignores
+ollama/data/
+n8n/data/
+mosquitto/data/
+mosquitto/log/
+homeassistant/*.log
+homeassistant/*.log.*
+homeassistant/deps/
+homeassistant/tts/
+
+
+homeassistant/.storage/
+homeassistant/*.db
+homeassistant/*.db-shm
+homeassistant/*.db-wal
+homeassistant/.cloud/
+homeassistant/.ha_run.lock
+homeassistant/.HA_VERSION
+
