new file:   BUGFIXES.md 	new file:   DEPLOY_GUIDE.md 	modified:   ai_boiler/Dockerfile 	modified:   ai_boiler/src/main.py 	modified:   ai_boiler/src/maintenance.py 	new file:   ai_boiler/test_local.py 	modified:   ot_simulator/sim_otgw.py

--- a/ai_boiler/Dockerfile
+++ b/ai_boiler/Dockerfile
@@ -9,6 +9,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy source code
 COPY src/ ./src/
 
+# Set Python path to allow imports
+ENV PYTHONPATH=/app
+
 # Expose API port
 EXPOSE 8000
 
