--- a/ot_simulator/Dockerfile
+++ b/ot_simulator/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.9-slim
 WORKDIR /app
-RUN pip install paho-mqtt
+RUN pip install paho-mqtt==2.0.0
 COPY sim_otgw.py .
 CMD ["python", "sim_otgw.py"]
