new file:   boiler-mobile-app/.gitignore 	new file:   boiler-mobile-app/App.tsx 	new file:   boiler-mobile-app/app.json 	new file:   boiler-mobile-app/assets/adaptive-icon.png 	new file:   boiler-mobile-app/assets/favicon.png 	new file:   boiler-mobile-app/assets/icon.png 	new file:   boiler-mobile-app/assets/splash-icon.png 	new file:   boiler-mobile-app/index.ts 	new file:   boiler-mobile-app/package-lock.json 	new file:   boiler-mobile-app/package.json 	new file:   boiler-mobile-app/src/api/MobileApiClient.ts 	new file:   boiler-mobile-app/src/components/BoilerStatusCard.tsx 	new file:   boiler-mobile-app/src/components/CentralDial.tsx 	new file:   boiler-mobile-app/src/components/ChatBubble.tsx 	new file:   boiler-mobile-app/src/components/EnergyBarChart.tsx 	new file:   boiler-mobile-app/src/components/EnergyTipsCard.tsx 	new file:   boiler-mobile-app/src/components/HotWaterCard.tsx 	new file:   boiler-mobile-app/src/components/QuickModeCard.tsx 	new file:   boiler-mobile-app/src/components/ScheduleTimeline.tsx 	new file:   boiler-mobile-app/src/components/StatusBanner.tsx 	new file:   boiler-mobile-app/src/components/WindowSensorBadge.tsx 	new file:   boiler-mobile-app/src/components/index.ts 	new file:   boiler-mobile-app/src/config/api.ts 	new file:   boiler-mobile-app/src/contexts/AuthContext.tsx 	new file:   boiler-mobile-app/src/contexts/DataContext.tsx 	new file:   boiler-mobile-app/src/navigation/RootNavigator.tsx 	new file:   boiler-mobile-app/src/navigation/TabNavigator.tsx 	new file:   boiler-mobile-app/src/screens/ChatScreen.tsx 	new file:   boiler-mobile-app/src/screens/DashboardScreen.tsx 	new file:   boiler-mobile-app/src/screens/EnergyScreen.tsx 	new file:   boiler-mobile-app/src/screens/LoginScreen.tsx 	new file:   boiler-mobile-app/src/screens/ProfileScreen.tsx 	new file:   boiler-mobile-app/src/screens/ScheduleScreen.tsx 	new file:   boiler-mobile-app/src/screens/index.ts 	new file:   boiler-mobile-app/src/services/ChatService.ts 	new file:  

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -160,3 +160,44 @@ services:
       - homeassistant
       - ollama
       - boiler_ai
+
+  # 10. PocketBase Database
+  pocketbase:
+    build: ./pocketbase
+    container_name: pocketbase_db
+    restart: unless-stopped
+    ports:
+      - "8090:8090"
+    volumes:
+      - ./pocketbase/pb_data:/pb/pb_data
+      - ./pocketbase/pb_migrations:/pb/pb_migrations
+    networks:
+      digital_twin_net:
+        ipv4_address: 172.28.0.110
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8090/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  # 11. Mobile & Web API Service
+  mobile_api:
+    build: ./mobile_api
+    container_name: mobile_api
+    restart: unless-stopped
+    ports:
+      - "8004:8000"
+    environment:
+      - HA_URL=http://172.28.0.10:8123
+      - HA_TOKEN=REPLACE_ME_WITH_REAL_LONG_LIVED_TOKEN
+      - CHATBOT_URL=http://172.28.0.90:8003
+      - AI_SERVICE_URL=http://172.28.0.70:8002
+      - POCKETBASE_URL=http://172.28.0.110:8090
+    networks:
+      digital_twin_net:
+        ipv4_address: 172.28.0.100
+    depends_on:
+      - homeassistant
+      - chatbot
+      - boiler_ai
+      - pocketbase
