--- a/boiler-mobile-app/package.json
+++ b/boiler-mobile-app/package.json
@@ -15,7 +15,6 @@
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.3",
     "expo": "^54.0.32",
-    "expo-av": "~16.0.8",
     "expo-linear-gradient": "^15.0.8",
     "expo-speech": "~14.0.8",
     "expo-status-bar": "~3.0.9",
@@ -24,7 +23,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.20.0",
+    "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
     "react-redux": "^9.2.0"
   },
