--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -180,7 +180,7 @@ services:
       timeout: 10s
       retries: 3
 
-  # 11. Mobile & Web API Service
+  # 11. Mobile & Web API Service (MQTT-based, no Home Assistant)
   mobile_api:
     build: ./mobile_api
     container_name: mobile_api
@@ -188,16 +188,15 @@ services:
     ports:
       - "8004:8000"
     environment:
-      - HA_URL=http://172.28.0.10:8123
-      - HA_TOKEN=REPLACE_ME_WITH_REAL_LONG_LIVED_TOKEN
+      - MQTT_BROKER=172.28.0.20
+      - MQTT_PORT=1883
       - CHATBOT_URL=http://172.28.0.90:8003
-      - AI_SERVICE_URL=http://172.28.0.70:8002
       - POCKETBASE_URL=http://172.28.0.110:8090
     networks:
       digital_twin_net:
         ipv4_address: 172.28.0.100
     depends_on:
-      - homeassistant
+      - mqtt_broker
       - chatbot
-      - boiler_ai
       - pocketbase
+
